--- a/keyhunt/other.html
+++ b/keyhunt/other.html
@@ -30,7 +30,7 @@
 			<p>*When talking to GPB, he may mention the Mimics, stating that they are only there to harm you. This is misleading, as they do nothing other than jumpscare you. Reading this dialog will raise the chances of a Toppin becoming a Mimic to 50% until the next one spawns.</p>
 			<h2>The Void Room</h2>
 			<audio controls><source src="assets/mu_pizzaboy.ogg" type="audio/ogg"></audio>
-			<p>This is the music that plays in the Void Room, as well as the Pizzaboy Clone rooms. It contains a speech of unknown origin (possibly the Bible? The resurrection and raining sound like the stories of Jesus and Noah's Arc). A rough transcript is provided below.</p>
+			<p>This is the music that plays in the Void Room, as well as the Pizzaboy Clone rooms. It contains a speech of unknown origin (possibly religious?). A rough transcript is provided below.</p>
 			<p>0:34 - [Unintelligible]</p>
 			<p>0:39 - Coming on down, coming on down today</p>
 			<p>0:43 - A resurrection</p>
