--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
     <head>
 		<meta charset="utf-8">
         <title>WestCraft15 (HOME)</title>
+        <link rel="icon" type="image/x-icon" href="assets/favicon.png">
     </head>
     <body>
         <h1>WestCraft15.github.io</h1>
