--- a/404.html
+++ b/404.html
@@ -21,17 +21,21 @@
 		const body = document.getElementsByTagName("body")[0];
 		const messages = [
 			["A Number 9 Large", "You clicked the wrong link, fool!", "Go Back"],
-			["look into the sky", "i see nothing\r\ni see so much of it", "leave\r\nleave\r\nleave\r\nleave\r\nleave\r\nleave\r\nleave\r\nleave\r\nleave\r\nleave\r\nleave\r\nleave\r\nleave\r\nleave\r\nleave\r\nleave\r\nleave\r\nleave\r\nleave\r\nleave\r\nleave\r\nleave\r\nleave\r\nleave\r\nleave\r\nleave\r\nleave", "background-image: url(/keyhunt/assets/bg_omori.png); color: white;"],
+			["look into the sky", "i see nothing\r\ni see so much of it", "leave\r\nleave\r\nleave\r\nleave\r\nleave\r\nleave\r\nleave\r\nleave\r\nleave\r\nleave\r\nleave\r\nleave\r\nleave\r\nleave\r\nleave\r\nleave\r\nleave\r\nleave\r\nleave\r\nleave\r\nleave\r\nleave\r\nleave\r\nleave\r\nleave\r\nleave\r\nleave", "background-image: url(/keyhunt/assets/bg_omori.png); color: #FFF;"],
 			["You Got Disk", "oh ah wwhops! content\r\nfiles missing", "back to go?"],
 			["Thank you Mario!", "But our webpage is in another castle!", "Push button B to select a world"],
 			["I'll steal it!", "That's it, I'm revoking your button privileges."],
 			["nope! try again", "She error on my 404 'til I page not found?", "*Extremely Loud Incorrect Buzzer*"],
 			["You already know", "Ayo look who fell asleep first!", "Prank 'em John!"],
-			["LEVEL SELECT", "You have found the secret level select\r\nscreen", "C O N G R A T U L A T I O N S"],
+			["LEVEL SELECT", "YOU HAVE FOUND THE SECRET LEVEL SELECT\r\nSCREEN", "C O N G R A T U L A T I O N S"],
 			["missile silo", "The missile knows where it is at all times. It knows this because it knows where it isn't. By subtracting where it is from where it isn't, or where it isn't from where it is (whichever is greater), it obtains a difference, or deviation. The guidance subsystem uses deviations to generate corrective commands to drive the missile from a position where it is to a position where it isn't, and arriving at a position where it wasn't, it now is. Consequently, the position where it is, is now the position that it wasn't, and it follows that the position that it was, is now the position that it isn't. In the event that the position that it is in is not the position that it wasn't, the system has acquired a variation, the variation being the difference between where the missile is, and where it wasn't. If variation is considered to be a significant factor, it too may be corrected by the GEA. However, the missile must also know where it was. The missile guidance computer scenario works as follows. Because a variation has modified some of the information the missile has obtained, it is not sure just where it is. However, it is sure where it isn't, within reason, and it knows where it was. It now subtracts where it should be from where it wasn't, or vice-versa, and by differentiating this from the algebraic sum of where it shouldn't be, and where it was, it is able to obtain the deviation and its variation, which is called error.", "What?"],
 			["The High Ground", "Hello there.", "General Kenobi."],
 			["Giant Enemy Spider", "Oh, I love this part!", "Aah-Eee-Ooh"],
 			["lego death star", "Can he chug a sparkling water and not burp?", "Oh my gosh- what do i do?"],
+			["Also try Minecraft!", "Cascade?", "That's my favorite map!"],
+			["what is even happening", "I am recreating tony", "oh no"],
+			["I hit my nose", "When the moon hits your eye, like a big pizza pie, that's amore.\r\nWhen the eel lunges out, and takes a bite of your snout, that's a moray.", "Get it? A moray eel?"],
+			["Entry Number 17", "Dark, darker, yet darker...", "Hello Internet, welcome to Game Theory.", "color: #FFF; background-color: #000; background-image: none;"]
 		]
 
 		const message = messages[Math.floor(Math.random() * messages.length)]
