--- a/keyhunt/guide.html
+++ b/keyhunt/guide.html
@@ -102,6 +102,8 @@
 			<iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/JBueev16SIA" title="Key 17" frameborder="0" allow="encrypted-media; picture-in-picture; web-share" allowfullscreen></iframe>
 			<h2 id="18">Key 18</h2>
 			<p>Wall Run into the ceiling slightly to the right of the metal block next to Crust Cove.</p>
+			<h3>Common Issues:</h3>
+			<ol><li>If the Key isn't there, you've already collected it.</li></ol>
 			<iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/eImdTR1Ja_Q" title="Key 18" frameborder="0" allow="encrypted-media; picture-in-picture; web-share" allowfullscreen></iframe>
 			<h2 id="19">Key 19</h2>
 			<p>On Floor 4, there are 6 locations for the Key to spawn. It will randomly choose one of them. Watch the video to see them all.</p>
@@ -136,6 +138,8 @@
 			<iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/0betMQUhZR8" title="Key 27" frameborder="0" allow="encrypted-media; picture-in-picture; web-share" allowfullscreen></iframe>
 			<h2 id="28">Key 28</h2>
 			<p>Wall Run to the left of Deep Dish 9 to access another room. You can go through the ceiling on the right side to talk to the Pizzaboy Clone. The Key will spawn in a secret in the left wall of the bottom room.</p>
+			<h3>Common Issues:</h3>
+			<ol><li>If the Key doesn't spawn, you've already collected it.</li></ol>
 			<iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/T9oQCU3TOFo" title="Key 28" frameborder="0" allow="encrypted-media; picture-in-picture; web-share" allowfullscreen></iframe>
 			<h2 id="29">Key 29</h2>
 			<p>Super Jump from the right half of the Oh Shit! gate to find a secret room. Enter the door and talk to the Pizzaboy Clone. The Key will spawn on a platform below you.</p>
