--- a/keyhunt/guide-af23.html
+++ b/keyhunt/guide-af23.html
@@ -16,7 +16,8 @@
 			<li class="dropdown">
 				<a href="javascript:void(0)">Version</a>
 				<div class="dropdown-content">
-					<a href="guide">1.1</a>
+					<a href="guide">1.2</a>
+					<a href="guide-1.1">1.1</a>
 					<a href="guide-af23" class="current">April Fools</a>
 					<a href="keyhunt-redux">ReDuX</a>
 				</div>
