--- a/keyhunt/keyhunt-redux.html
+++ b/keyhunt/keyhunt-redux.html
@@ -13,7 +13,8 @@
 			<li class="dropdown">
 				<a href="javascript:void(0)">Version</a>
 				<div class="dropdown-content">
-					<a href="keyhunt">1.1</a>
+					<a href="keyhunt">1.2</a>
+					<a href="keyhunt-1.1">1.1</a>
 					<a href="keyhunt-af23">April Fools</a>
 					<a href="keyhunt-redux" class="current">ReDuX</a>
 				</div>
