--- a/keyhunt/keyhunt-1.1.html
+++ b/keyhunt/keyhunt-1.1.html
@@ -9,15 +9,15 @@
 
 	<body style="text-align: center;">
 		<ul class="navBar">
-			<li><a href="keyhunt" class="current">Landing page</a></li>
-			<li><a href="guide">Keys</a></li>
-			<li><a href="help">Help</a></li>
-			<li><a href="other">Other Stuff</a></li>
+			<li><a href="keyhunt-1.1" class="current">Landing page</a></li>
+			<li><a href="guide-1.1">Keys</a></li>
+			<li><a href="help-1.1">Help</a></li>
+			<li><a href="other-1.1">Other Stuff</a></li>
 			<li class="dropdown">
 				<a href="javascript:void(0)">Version</a>
 				<div class="dropdown-content">
-					<a href="keyhunt" class="current">1.2</a>
-					<a href="keyhunt-1.1">1.1</a>
+					<a href="keyhunt">1.2</a>
+					<a href="keyhunt-1.1" class="current">1.1</a>
 					<a href="keyhunt-af23">April Fools</a>
 					<a href="keyhunt-redux">ReDuX</a>
 				</div>
