keys 1-25 are now accurate

--- a/keyhunt/guide-1.1.html
+++ b/keyhunt/guide-1.1.html
@@ -34,11 +34,11 @@
 			<ol><li>You can't continue to break through the wall until you have 25 Keys. It is not necessary to progress.</li></ol>
 			<iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/vGQSddUHiZs" title="Key 1" frameborder="0" allow="encrypted-media; picture-in-picture; web-share" allowfullscreen></iframe>
 			<h2 id="2">Key 2</h2>
-			<p>Talk to Snick in the SAGE Building, then the Key spawns to the left of Oregano Mirage.</p>
+			<p>Talk to Snick in the SAGE Building, then the Key spawns in the block to the left of Oregano Mirage.</p>
 			<h3>Common Issues:</h3>
 			<ol>
 				<li>Contrary to popular belief, breaking the block before talking to Snick doesn't prevent the key from spawning.</li>
-				<li>There is a very rare softlock that can happen if you don't talk to Snick before you have 5 Keys. Ask on Discord if you</li>
+				<li>There is a very rare softlock that can happen if you don't talk to Snick before you have 5 Keys. Ask on Discord if you believe this happened to you.</li>
 			</ol>
 			<iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/GrYFBF_FuFc" title="Key 2" frameborder="0" allow="encrypted-media; picture-in-picture; web-share" allowfullscreen></iframe>
 			<h2 id="3">Key 3</h2>
