finished v1.2 guide (more or less)
also removed redux

--- a/keyhunt/guide.html
+++ b/keyhunt/guide.html
@@ -19,7 +19,6 @@
 					<a href="guide" class="current">1.2</a>
 					<a href="guide-1.1">1.1</a>
 					<a href="guide-af23">April Fools</a>
-					<a href="keyhunt-redux">ReDuX</a>
 				</div>
 			</li>
 		</ul>
@@ -137,26 +136,24 @@
 			<p>In the 12th room of CToP, “Not the Time for Games”, dodge the first cow (or abuse the character select taunt) after the Minigolf section to find a Key on the ground below.</p>
 			<!--<iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/PbFIL41I-co" title="Key 24" frameborder="0" allow="encrypted-media; picture-in-picture; web-share" allowfullscreen></iframe>-->
 			<h2 id="25">Key 25</h2>
-			<p>On Floor 2 there are two John blocks in the ceiling above Oregano Mirage. Ground Pound directly below them during Pizza Time to collect a Key.</p>
+			<p>On Floor 2 you can enter the area with Fun Farm via hidden John Blocks above the visible ones.</p>
 			<!--<iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/C_LS53QqUFg" title="Key 25" frameborder="0" allow="encrypted-media; picture-in-picture; web-share" allowfullscreen></iframe>-->
 			<h2 id="26">Key 26</h2>
-			<p>You can continue breaking blocks in the same place you found the 1st Key. Talk to the Pizzaboy Clone and Super Jump directly above him to collect the Key.</p>
+			<p>You can break through the top of the wall to the right of Holiday Cheer. Talk to the Pizzaboy Clone and Super Jump directly above him to collect the Key.</p>
 			<h3>Common Issues:</h3>
 			<ol><li>If the block is still unbreakable, talk to GPB.</li></ol>
 			<!--<iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/7Yf12YkL10Q" title="Key 26" frameborder="0" allow="encrypted-media; picture-in-picture; web-share" allowfullscreen></iframe>-->
 			<h2 id="27">Key 27</h2>
-			<p>On Floor 2 there is a crevice in the floor between Wasteyard and Fast Food Saloon. Ground Pound on the right to reveal a new tunnel. Talk to the Pizzaboy Clone and run right on an invisible path. The Key is on another pillar in the void.</p>
+			<p>Ground Pound just to the right of the small ledge near Fast Food Saloon. Talk to the Pizzaboy Clone and run right until you reach the Key.</p>
 			<!--<iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/0betMQUhZR8" title="Key 27" frameborder="0" allow="encrypted-media; picture-in-picture; web-share" allowfullscreen></iframe>-->
 			<h2 id="28">Key 28</h2>
-			<p>Wall Run to the left of Deep Dish 9 to access another room. You can go through the ceiling on the right side to talk to the Pizzaboy Clone. The Key will spawn in a secret in the left wall of the bottom room.</p>
-			<h3>Common Issues:</h3>
-			<ol><li>If the Key doesn't spawn, you've already collected it.</li></ol>
+			<p>Wall Run up the overhang to the right of Deep Dish 9 to access another room. You can go through the ceiling on the right side to talk to the Pizzaboy Clone. The Key will spawn in a secret in the left wall of the bottom room.</p>
 			<!--<iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/T9oQCU3TOFo" title="Key 28" frameborder="0" allow="encrypted-media; picture-in-picture; web-share" allowfullscreen></iframe>-->
 			<h2 id="29">Key 29</h2>
 			<p>Super Jump from the right half of the Oh Shit! gate to find a secret room. Enter the door and talk to the Pizzaboy Clone. The Key will spawn on a platform below you.</p>
 			<!--<iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/h7dG1so0OuI" title="Key 29" frameborder="0" allow="encrypted-media; picture-in-picture; web-share" allowfullscreen></iframe>-->
 			<h2 id="30">Key 30</h2>
-			<p>Repeatedly enter the Void Room until a new platform spawns by the entrance (1/10 chance). The Key is on top of it.</p>
+			<p>Talk to GPB. The Key spawns on a high platform to his left.</p>
 			<!--<iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/6FVqR5OnoFw" title="Key 30" frameborder="0" allow="encrypted-media; picture-in-picture; web-share" allowfullscreen></iframe>-->
 			<h2 id="31">Key 31</h2>
 			<p>In Pizzascape, the Key is in a new room above the Secret that’s only available during Pizza Time. If you can’t access it, talk to GPB in the Void Room and try again. Complete a short challenge to find the Key and a Pizzaboy Cutout.</p>
@@ -173,7 +170,7 @@
 			<p>In room 12 of The Three-Cheese Tundra (“Back of the Fridge”), there is a platform at the bottom right. Take the door hidden in the wall to find a new room. Get to the bottom, toggle the On/Off Switch, and make it back to the top to collect the Key.</p>
 			<!--<iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/Qw0cAiDh9JU" title="Key 34" frameborder="0" allow="encrypted-media; picture-in-picture; web-share" allowfullscreen></iframe>-->
 			<h2 id="35">Key 35</h2>
-			<p>In the 7th room of Pizzaboy’s Pizz-Pizza, there are John Blocks to the right of the Treasure Room door. They deactivate during Pizza Time. There is a door inside the wall that leads to a new room. Get all the way to the right, toggle the On/Off Switch, and make it back without getting caught by the Sausage Toppin Monster to collect the Key. Don’t shoot the Toppin Monster before pressing the switch, as this will softlock the room and force you to replay the entire level.</p>
+			<p>In the 7th room of Pizzaboy’s Pizz-Pizza, there are John Blocks to the right of the Treasure Room door. They deactivate during Pizza Time. There is a door inside the wall that leads to a new room. Get all the way to the right, toggle the On/Off Switch, and make it back without getting caught by the Sausage Toppin Monster to collect the Key.</p>
 			<!--<iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/3-6pU8y_XA4" title="Key 35" frameborder="0" allow="encrypted-media; picture-in-picture; web-share" allowfullscreen></iframe>-->
 			<h2 id="36">Key 36</h2>
 			<p>The credits now show 6 new hints. You must complete them in this order:</p>
@@ -194,8 +191,8 @@
 				<!--<iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/izvLgxItydA" title="Key 36g" frameborder="0" allow="encrypted-media; picture-in-picture; web-share" allowfullscreen></iframe>--></li>
 			</ol>
 			<h2 id="37">Key 37</h2>
-			<p>The Key in the ceiling above John Gutter has made many upset. It looks obtainable, like its taunting you. Fortunately, it is possible, see the video below for help.</p>
-			<!--<iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/FAbxIdeF6CA" title="Key 35" frameborder="0" allow="encrypted-media; picture-in-picture; web-share" allowfullscreen></iframe>-->
+			<p>After the GPB bossfight, return to each of the previous Void Rooms from Floor 1 and up. Talk to the NPC before advancing to the next room.</p>
+			<!--<iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/FAbxIdeF6CA" title="Key 37" frameborder="0" allow="encrypted-media; picture-in-picture; web-share" allowfullscreen></iframe>-->
 		</div>
 	</body>
 </html>
