--- a/keyhunt/guide.html
+++ b/keyhunt/guide.html
@@ -173,7 +173,7 @@
 			<p>In the 7th room of Pizzaboy’s Pizz-Pizza, there are John Blocks to the right of the Treasure Room door. They deactivate during Pizza Time. There is a door inside the wall that leads to a new room. Get all the way to the right, toggle the On/Off Switch, and make it back without getting caught by the Sausage Toppin Monster to collect the Key.</p>
 			<!--<iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/3-6pU8y_XA4" title="Key 35" frameborder="0" allow="encrypted-media; picture-in-picture; web-share" allowfullscreen></iframe>-->
 			<h2 id="36">Key 36</h2>
-			<p>The credits now show 6 new hints. You must complete them in this order:</p>
+			<p>The credits now show 6 new hints (Note: The save icon no longer appears upon completing them). You must complete them in this order:</p>
 			<ol>
 				<li>Ground Pound a platform in the 7th room of The Three-Cheese Tundra (“Icicle Pillars”). It’s the overhang immediately after you get up from the Pizza Box area.<br>
 				<!--<iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/3aYSetw6sBU" title="Key 36a" frameborder="0" allow="encrypted-media; picture-in-picture; web-share" allowfullscreen></iframe>--></li>
