clearer wording and no save warning

--- a/keyhunt/guide-1.1.html
+++ b/keyhunt/guide-1.1.html
@@ -165,9 +165,9 @@
 			<ol>
 				<li>Ground Pound a platform in the 7th room of The Three-Cheese Tundra (“Icicle Pillars”). It’s the overhang immediately after you get up from the Pizza Box area.<br>
 				<iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/3aYSetw6sBU" title="Key 36a" frameborder="0" allow="encrypted-media; picture-in-picture; web-share" allowfullscreen></iframe></li>
-				<li>Super Jump into the ceiling before the first timed gate in the 6th room of Fast Food Saloon (“Big Long Weenie”).<br>
+				<li>Slam into the ceiling in front of the first timed gate in the 6th room of Fast Food Saloon (“Big Long Weenie”).<br>
 				<iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/wmCy0LiA9f0" title="Key 36b" frameborder="0" allow="encrypted-media; picture-in-picture; web-share" allowfullscreen></iframe></li>
-				<li>In the Key room in The Ancient Cheese (“Explosive Personality”), Super Jump into the ceiling of the pocket with the 4 Small Toppings.<br>
+				<li>In the Key room in The Ancient Cheese (“Explosive Personality”), slam into the ceiling of the pocket with the 4 Small Toppings.<br>
 				<iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/JGbTO-dex6w" title="Key 36c" frameborder="0" allow="encrypted-media; picture-in-picture; web-share" allowfullscreen></iframe></li>
 				<li>In the second room after the second key door in Meat Lover’s Mansion (“The Portrait Room”), cross the gap with the Fake Peppino arm and run into the ceiling.<br>
 				<iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/owGPet-ckdA" title="Key 36d" frameborder="0" allow="encrypted-media; picture-in-picture; web-share" allowfullscreen></iframe></li>
