--- a/keyhunt/guide.html
+++ b/keyhunt/guide.html
@@ -167,25 +167,25 @@
 			<p>In Crust Cove, there is a pit to the right of Pillar John with a door in a secret in the right wall. Switch your Grab Type to Pummel to cross the water without activating Pizza Time. Complete the challenge to obtain the Key. Switching to Vigilante may help, as his dynamite can kill the Rats and prevent a softlock.</p>
 			<!--<iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/DzAlIUU4kkI" title="Key 33" frameborder="0" allow="encrypted-media; picture-in-picture; web-share" allowfullscreen></iframe>-->
 			<h2 id="34">Key 34</h2>
-			<p>In room 12 of The Three-Cheese Tundra (“Back of the Fridge”), there is a platform at the bottom right. Take the door hidden in the wall to find a new room. Get to the bottom, toggle the On/Off Switch, and make it back to the top to collect the Key.</p>
+			<p>In room 12 of Refrigerator-Refrigerador-Freezerator (“Back of the Fridge”), there is a platform at the bottom right. Take the door hidden in the wall to find a new room. Get to the bottom, toggle the On/Off Switch, and make it back to the top to collect the Key.</p>
 			<!--<iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/Qw0cAiDh9JU" title="Key 34" frameborder="0" allow="encrypted-media; picture-in-picture; web-share" allowfullscreen></iframe>-->
 			<h2 id="35">Key 35</h2>
-			<p>In the 7th room of Pizzaboy’s Pizz-Pizza, there are John Blocks to the right of the Treasure Room door. They deactivate during Pizza Time. There is a door inside the wall that leads to a new room. Get all the way to the right, toggle the On/Off Switch, and make it back without getting caught by the Sausage Toppin Monster to collect the Key.</p>
+			<p>In the 7th room of Don't Make A Sound, there are John Blocks to the right of the Treasure Room door. They deactivate during Pizza Time. There is a door inside the wall that leads to a new room. Get all the way to the right, toggle the On/Off Switch, and make it back without getting caught by the Sausage Toppin Monster to collect the Key.</p>
 			<!--<iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/3-6pU8y_XA4" title="Key 35" frameborder="0" allow="encrypted-media; picture-in-picture; web-share" allowfullscreen></iframe>-->
 			<h2 id="36">Key 36</h2>
-			<p>The credits now show 6 new hints (Note: The save icon no longer appears upon completing them). You must complete them in this order:</p>
+			<p>The credits now show 6 new hints. Due to a bug, the game DOES NOT SAVE upon hitting these spots, DO NOT quit to title or close the game during this proccess. You must complete them in this order:</p>
 			<ol>
-				<li>Ground Pound a platform in the 7th room of The Three-Cheese Tundra (“Icicle Pillars”). It’s the overhang immediately after you get up from the Pizza Box area.<br>
+				<li>Ground Pound a platform in the 7th room of Refrigerator-Refrigerador-Freezerator (“Icicle Pillars”). It’s the overhang immediately after you get up from the Pizza Box area.<br>
 				<!--<iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/3aYSetw6sBU" title="Key 36a" frameborder="0" allow="encrypted-media; picture-in-picture; web-share" allowfullscreen></iframe>--></li>
-				<li>Super Jump into the ceiling before the first timed gate in the 6th room of Fast Food Saloon (“Big Long Weenie”).<br>
+				<li>Slam into the ceiling in front of the first timed gate in the 6th room of Fast Food Saloon (“Big Long Weenie”).<br>
 				<!--<iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/wmCy0LiA9f0" title="Key 36b" frameborder="0" allow="encrypted-media; picture-in-picture; web-share" allowfullscreen></iframe>--></li>
-				<li>In the Key room in The Ancient Cheese (“Explosive Personality”), Super Jump into the ceiling of the pocket with the 4 Small Toppings.<br>
+				<li>In the Key room in The Ancient Cheese (“Explosive Personality”), slam into the ceiling of the pocket with the 4 Small Toppings.<br>
 				<!--<iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/JGbTO-dex6w" title="Key 36c" frameborder="0" allow="encrypted-media; picture-in-picture; web-share" allowfullscreen></iframe>--></li>
 				<li>In the second room after the second key door in Meat Lover’s Mansion (“The Portrait Room”), cross the gap with the Fake Peppino arm and run into the ceiling.<br>
 				<!--<iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/owGPet-ckdA" title="Key 36d" frameborder="0" allow="encrypted-media; picture-in-picture; web-share" allowfullscreen></iframe>--></li>
 				<li>During Pizza Time in Gnome Forest, Super Jump up in the room before the exit right where the arrow sign is.<br>
 				<!--<iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/cTLCfVgcIo8" title="Key 36e" frameborder="0" allow="encrypted-media; picture-in-picture; web-share" allowfullscreen></iframe>--></li>
-				<li>In the third room of Champion’s Road (“All the Way Up”), run into the ceiling directly to the left of the Cheese Block in the Present tunnel.<br>
+				<li>In the third room of Champignon’s Road (“All the Way Up”), run into the ceiling directly to the left of the Cheese Block in the Present tunnel.<br>
 				<!--<iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/ODci24FfZfg" title="Key 36f" frameborder="0" allow="encrypted-media; picture-in-picture; web-share" allowfullscreen></iframe>--></li>
 				<li>A new hint now appears in the credits. Run into the underside of the small overhang next to GPB. Afterwards, the last Key will spawn on top of the tower. Collect it and return to the Void Room for the finale.<br>
 				<!--<iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/izvLgxItydA" title="Key 36g" frameborder="0" allow="encrypted-media; picture-in-picture; web-share" allowfullscreen></iframe>--></li>
