clearer wording on 27

--- a/keyhunt/guide.html
+++ b/keyhunt/guide.html
@@ -144,7 +144,7 @@
 			<ol><li>If the block is still unbreakable, talk to GPB.</li></ol>
 			<!--<iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/7Yf12YkL10Q" title="Key 26" frameborder="0" allow="encrypted-media; picture-in-picture; web-share" allowfullscreen></iframe>-->
 			<h2 id="27">Key 27</h2>
-			<p>Ground Pound just to the right of the small ledge near Fast Food Saloon. Talk to the Pizzaboy Clone and run right until you reach the Key. DO NOT TALK TO THE APPARITION THAT APPEARS OUTSIDE OF THE ROOM. IT LOCKS YOU OUT OF KEY 37.</p>
+			<p>Ground Pound just to the left of Fast Food Saloon. Talk to the Pizzaboy Clone and run right until you reach the Key. DO NOT TALK TO THE APPARITION THAT APPEARS OUTSIDE OF THE ROOM. IT LOCKS YOU OUT OF KEY 37.</p>
 			<!--<iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/0betMQUhZR8" title="Key 27" frameborder="0" allow="encrypted-media; picture-in-picture; web-share" allowfullscreen></iframe>-->
 			<h2 id="28">Key 28</h2>
 			<p>Wall Run up the overhang to the right of Deep Dish 9 to access another room. You can go through the ceiling on the right side to talk to the Pizzaboy Clone. The Key will spawn in a secret in the left wall of the bottom room. DO NOT TALK TO THE APPARITION THAT APPEARS OUTSIDE OF THE ROOM. IT LOCKS YOU OUT OF KEY 37.</p>
